# backtrack

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/backtrack/: backtrack_logging.py  devs.json  exceptions.py  main.py  results.py
src/backtrack/device/arista/: device.py
src/backtrack/device/base/: device.py
src/backtrack/git/: git.py
src/backtrack/inventory/base/: inventory.py
src/backtrack/inventory/json_inventory/: inventory.py
src/backtrack/storage/base/: storage.py
src/backtrack/storage/fs/: storage.py
