[metadata]
name = backtrack
description = Backtrack: Back up your network devices fast and efficiently!
author = Delio Innamorati
url = https://github.com/delioinnamorati/backtrack
keywords = 
    asyncio
    networking
    backup
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires = 
    aiofile==3.7.4
    aiopath==0.5.12
    scrapli==2021.7.30
    scrapli-netconf==2021.7.30



[options.package_data]
backtrack = py.typed

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
known_first_party = backtrack

[pydocstyle]
match-dir = ^backtrack/*
ignore = D101,D202,D203,D212,D400,D406,D407,D408,D409,D415
# D101: missing docstring in public class
# D202: No blank lines allowed after function docstring
# D203: 1 blank line required before class docstring
# D212: Multi-line docstring summary should start at the first line
# D400: First line should end with a period
# D406: Section name should end with a newline
# D407: Missing dashed underline after section
# D408: Section underline should be in the line following the sections name
# D409: Section underline should match the length of its name
# D415: first line should end with a period, question mark, or exclamation point



